Z-Index fix for full screen photo popup

--- a/app/assets/stylesheets/screen.css.scss
+++ b/app/assets/stylesheets/screen.css.scss
@@ -442,6 +442,7 @@ ul.tags {
     top: 30px;
     left: 20%;
   width: 60%;
+  z-index: 101;
   img {
     max-width: 100%;
     height: auto;
